libraries/grammars/fullParser.py
# Generated from ./grammars/full.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class fullParser ( Parser ):

    grammarFileName = "full.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'in'", "'range('", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'['", "']'", "','", "'if'", 
                     "'elif'", "'else'", "':'", "'('", "')'", "<INVALID>", 
                     "<INVALID>", "'not'", "'while'", "'for'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "NUMBER", "BOOLEAN", 
                      "STRING", "ESC", "VARIABLE", "WS", "NEWLINE", "WS_SKIPPED", 
                      "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "ASSIGNMENT_OP", 
                      "ARITHMETIC_OP", "LBRACKET", "RBRACKET", "COMMA", 
                      "IF", "ELIF", "ELSE", "COLON", "LPAREN", "RPAREN", 
                      "COMPARISON_OP", "LOGICAL_OP", "NOT_OP", "WHILE", 
                      "FOR" ]

    RULE_assignment = 0
    RULE_expression = 1
    RULE_array = 2
    RULE_count = 3
    RULE_value = 4
    RULE_assignment_operator = 5
    RULE_operator = 6
    RULE_condition = 7
    RULE_logical_condition = 8
    RULE_comparison_condition = 9
    RULE_stat = 10
    RULE_expr = 11
    RULE_block = 12
    RULE_line = 13
    RULE_comment = 14
    RULE_if_block = 15
    RULE_while_block = 16
    RULE_for_block = 17
    RULE_for_condition = 18
    RULE_iterable = 19

    ruleNames =  [ "assignment", "expression", "array", "count", "value", 
                   "assignment_operator", "operator", "condition", "logical_condition", 
                   "comparison_condition", "stat", "expr", "block", "line", 
                   "comment", "if_block", "while_block", "for_block", "for_condition", 
                   "iterable" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    NUMBER=3
    BOOLEAN=4
    STRING=5
    ESC=6
    VARIABLE=7
    WS=8
    NEWLINE=9
    WS_SKIPPED=10
    SINGLE_LINE_COMMENT=11
    MULTI_LINE_COMMENT=12
    ASSIGNMENT_OP=13
    ARITHMETIC_OP=14
    LBRACKET=15
    RBRACKET=16
    COMMA=17
    IF=18
    ELIF=19
    ELSE=20
    COLON=21
    LPAREN=22
    RPAREN=23
    COMPARISON_OP=24
    LOGICAL_OP=25
    NOT_OP=26
    WHILE=27
    FOR=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(fullParser.VARIABLE, 0)

        def assignment_operator(self):
            return self.getTypedRuleContext(fullParser.Assignment_operatorContext,0)


        def expression(self):
            return self.getTypedRuleContext(fullParser.ExpressionContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.WS)
            else:
                return self.getToken(fullParser.WS, i)

        def getRuleIndex(self):
            return fullParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = fullParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(fullParser.VARIABLE)
            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==fullParser.WS:
                self.state = 41
                self.match(fullParser.WS)


            self.state = 44
            self.assignment_operator()
            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==fullParser.WS:
                self.state = 45
                self.match(fullParser.WS)


            self.state = 48
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fullParser.ValueContext)
            else:
                return self.getTypedRuleContext(fullParser.ValueContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.WS)
            else:
                return self.getToken(fullParser.WS, i)

        def operator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fullParser.OperatorContext)
            else:
                return self.getTypedRuleContext(fullParser.OperatorContext,i)


        def getRuleIndex(self):
            return fullParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = fullParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.value()
            self.state = 52
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 51
                self.match(fullParser.WS)


            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==fullParser.ARITHMETIC_OP:
                self.state = 54
                self.operator()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==fullParser.WS:
                    self.state = 55
                    self.match(fullParser.WS)


                self.state = 58
                self.value()
                self.state = 60
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 59
                    self.match(fullParser.WS)


                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACKET(self):
            return self.getToken(fullParser.LBRACKET, 0)

        def RBRACKET(self):
            return self.getToken(fullParser.RBRACKET, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fullParser.ValueContext)
            else:
                return self.getTypedRuleContext(fullParser.ValueContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.WS)
            else:
                return self.getToken(fullParser.WS, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.COMMA)
            else:
                return self.getToken(fullParser.COMMA, i)

        def getRuleIndex(self):
            return fullParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)




    def array(self):

        localctx = fullParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(fullParser.LBRACKET)
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==fullParser.WS:
                    self.state = 68
                    self.match(fullParser.WS)


                self.state = 71
                self.value()
                self.state = 73
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 72
                    self.match(fullParser.WS)


                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==fullParser.COMMA:
                    self.state = 75
                    self.match(fullParser.COMMA)
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==fullParser.WS:
                        self.state = 76
                        self.match(fullParser.WS)


                    self.state = 79
                    self.value()
                    self.state = 81
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        self.state = 80
                        self.match(fullParser.WS)


                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==fullParser.WS:
                self.state = 90
                self.match(fullParser.WS)


            self.state = 93
            self.match(fullParser.RBRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CountContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(fullParser.NUMBER, 0)

        def VARIABLE(self):
            return self.getToken(fullParser.VARIABLE, 0)

        def getRuleIndex(self):
            return fullParser.RULE_count

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCount" ):
                listener.enterCount(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCount" ):
                listener.exitCount(self)




    def count(self):

        localctx = fullParser.CountContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_count)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            _la = self._input.LA(1)
            if not(_la==fullParser.NUMBER or _la==fullParser.VARIABLE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(fullParser.NUMBER, 0)

        def VARIABLE(self):
            return self.getToken(fullParser.VARIABLE, 0)

        def BOOLEAN(self):
            return self.getToken(fullParser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(fullParser.STRING, 0)

        def LPAREN(self):
            return self.getToken(fullParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(fullParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(fullParser.RPAREN, 0)

        def array(self):
            return self.getTypedRuleContext(fullParser.ArrayContext,0)


        def getRuleIndex(self):
            return fullParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = fullParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_value)
        try:
            self.state = 106
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [fullParser.NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.match(fullParser.NUMBER)
                pass
            elif token in [fullParser.VARIABLE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(fullParser.VARIABLE)
                pass
            elif token in [fullParser.BOOLEAN]:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.match(fullParser.BOOLEAN)
                pass
            elif token in [fullParser.STRING]:
                self.enterOuterAlt(localctx, 4)
                self.state = 100
                self.match(fullParser.STRING)
                pass
            elif token in [fullParser.LPAREN]:
                self.enterOuterAlt(localctx, 5)
                self.state = 101
                self.match(fullParser.LPAREN)
                self.state = 102
                self.expression()
                self.state = 103
                self.match(fullParser.RPAREN)
                pass
            elif token in [fullParser.LBRACKET]:
                self.enterOuterAlt(localctx, 6)
                self.state = 105
                self.array()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Assignment_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGNMENT_OP(self):
            return self.getToken(fullParser.ASSIGNMENT_OP, 0)

        def getRuleIndex(self):
            return fullParser.RULE_assignment_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment_operator" ):
                listener.enterAssignment_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment_operator" ):
                listener.exitAssignment_operator(self)




    def assignment_operator(self):

        localctx = fullParser.Assignment_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assignment_operator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(fullParser.ASSIGNMENT_OP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARITHMETIC_OP(self):
            return self.getToken(fullParser.ARITHMETIC_OP, 0)

        def getRuleIndex(self):
            return fullParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)




    def operator(self):

        localctx = fullParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_operator)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(fullParser.ARITHMETIC_OP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_condition(self):
            return self.getTypedRuleContext(fullParser.Logical_conditionContext,0)


        def getRuleIndex(self):
            return fullParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = fullParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.logical_condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Logical_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comparison_condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fullParser.Comparison_conditionContext)
            else:
                return self.getTypedRuleContext(fullParser.Comparison_conditionContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.WS)
            else:
                return self.getToken(fullParser.WS, i)

        def LOGICAL_OP(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.LOGICAL_OP)
            else:
                return self.getToken(fullParser.LOGICAL_OP, i)

        def COMPARISON_OP(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.COMPARISON_OP)
            else:
                return self.getToken(fullParser.COMPARISON_OP, i)

        def getRuleIndex(self):
            return fullParser.RULE_logical_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogical_condition" ):
                listener.enterLogical_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogical_condition" ):
                listener.exitLogical_condition(self)




    def logical_condition(self):

        localctx = fullParser.Logical_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_logical_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==fullParser.WS:
                self.state = 114
                self.match(fullParser.WS)


            self.state = 117
            self.comparison_condition()
            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==fullParser.WS:
                        self.state = 118
                        self.match(fullParser.WS)


                    self.state = 121
                    _la = self._input.LA(1)
                    if not(_la==fullParser.COMPARISON_OP or _la==fullParser.LOGICAL_OP):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 123
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==fullParser.WS:
                        self.state = 122
                        self.match(fullParser.WS)


                    self.state = 125
                    self.comparison_condition() 
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,17,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Comparison_conditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT_OP(self):
            return self.getToken(fullParser.NOT_OP, 0)

        def comparison_condition(self):
            return self.getTypedRuleContext(fullParser.Comparison_conditionContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.WS)
            else:
                return self.getToken(fullParser.WS, i)

        def LPAREN(self):
            return self.getToken(fullParser.LPAREN, 0)

        def logical_condition(self):
            return self.getTypedRuleContext(fullParser.Logical_conditionContext,0)


        def RPAREN(self):
            return self.getToken(fullParser.RPAREN, 0)

        def value(self):
            return self.getTypedRuleContext(fullParser.ValueContext,0)


        def getRuleIndex(self):
            return fullParser.RULE_comparison_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComparison_condition" ):
                listener.enterComparison_condition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComparison_condition" ):
                listener.exitComparison_condition(self)




    def comparison_condition(self):

        localctx = fullParser.Comparison_conditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_comparison_condition)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,21,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(fullParser.NOT_OP)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==fullParser.WS:
                    self.state = 132
                    self.match(fullParser.WS)


                self.state = 135
                self.comparison_condition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.match(fullParser.LPAREN)
                self.state = 138
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
                if la_ == 1:
                    self.state = 137
                    self.match(fullParser.WS)


                self.state = 140
                self.logical_condition()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==fullParser.WS:
                    self.state = 141
                    self.match(fullParser.WS)


                self.state = 144
                self.match(fullParser.RPAREN)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.value()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(fullParser.ExprContext,0)


        def EOF(self):
            return self.getToken(fullParser.EOF, 0)

        def getRuleIndex(self):
            return fullParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)




    def stat(self):

        localctx = fullParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_stat)
        try:
            self.state = 151
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.match(fullParser.EOF)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(fullParser.BlockContext,0)


        def EOF(self):
            return self.getToken(fullParser.EOF, 0)

        def getRuleIndex(self):
            return fullParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = fullParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.block()
            self.state = 154
            self.match(fullParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fullParser.LineContext)
            else:
                return self.getTypedRuleContext(fullParser.LineContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.NEWLINE)
            else:
                return self.getToken(fullParser.NEWLINE, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(fullParser.WS)
            else:
                return self.getToken(fullParser.WS, i)

        def getRuleIndex(self):
            return fullParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = fullParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,25,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 157
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
                    if la_ == 1:
                        self.state = 156
                        self.match(fullParser.WS)


                    self.state = 159
                    self.line()
                    self.state = 161
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==fullParser.WS:
                        self.state = 160
                        self.match(fullParser.WS)


                    self.state = 163
                    self.match(fullParser.NEWLINE) 
                self.state = 169
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,25,self._ctx)

            self.state = 171
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,26,self._ctx)
            if la_ == 1:
                self.state = 170
                self.match(fullParser.WS)


            self.state = 173
            self.line()
            self.state = 175
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,27,self._ctx)
            if la_ == 1:
                self.state = 174
                self.match(fullParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self):
            return self.getTypedRuleContext(fullParser.AssignmentContext,0)


        def comment(self):
            return self.getTypedRuleContext(fullParser.CommentContext,0)


        def if_block(self):
            return self.getTypedRuleContext(fullParser.If_blockContext,0)


        def while_block(self):
            return self.getTypedRuleContext(fullParser.While_blockContext,0)


        def for_block(self):
            return self.getTypedRuleContext(fullParser.For_blockContext,0)


        def getRuleIndex(self):
            return fullParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):
